tests/fixtures/valid/simple_model.incn
model User:
    name: str
    age: int = 0
    email: str


def greet(name: str) -> str:
    return "Hello"
