tests/fixtures/invalid/unknown_symbol.incn
def foo() -> int:
    return undefined_variable
